# flask_music_search

./: .gitignore  LICENSE  README.md  app.py  db_connect.py  ftp_connect.py  helpers.py  main.py  music-search.service  music-search.sh  pyproject.toml  requirements.txt  settings.py  setup.py  utils.py
.github/workflows/: pylint.yml
static/: player.js  scripts.js  styles.css
templates/: ajax_test.html
